# Net-game

./: .git-blame-ignore-revs  .gitattributes  .gitblameignore  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt
cmake/: CompilerWarnings.cmake  Doxygen.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  bool_array.c  cell.c  game.c  game_io.c  game_rand.c
src/board_generation/: CMakeLists.txt  net_gen.c
src/include/: bool_array.h  cell.h  cross_io.h  draw_game.h  game.h  game_io.h  game_rand.h  sdl_graphic.h
src/sdl2/: CMakeLists.txt  net_graphic.c  sdl_graphic.c
src/sdl2/assets/: LICENSE
src/solver/: CMakeLists.txt  net_solve.c  solve_brut.c  solve_smart.c
src/terminal/: CMakeLists.txt  draw_game.c  net_display.c  net_text.c
test/: CMakeLists.txt  tests.c  tests_bool_array.c  tests_cell.c  tests_game.c
