include_directories(${NET_HEADERS_DIR})

add_executable(tests_game tests_game.c)
target_link_libraries(tests_game project_warnings project_options ${GAME_LIBS})

add_test(copy_game_valid                        tests_game   copy_game_valid)
add_test(copy_game_null_game                    tests_game   copy_game_null_game)
add_test(delete_game_valid_copy                 tests_game   delete_game_valid_copy)
add_test(delete_game_valid_empty                tests_game   delete_game_valid_empty)
add_test(delete_game_valid_empty_ext            tests_game   delete_game_valid_empty_ext)
add_test(delete_game_valid_normal               tests_game   delete_game_valid_normal)
add_test(delete_game_valid_normal_ext           tests_game   delete_game_valid_normal_ext)
add_test(delete_game_null_game                  tests_game   delete_game_null_game)
add_test(game_height_valid                      tests_game   game_height_valid)
add_test(game_height_null_game                  tests_game   game_height_null_game)
add_test(game_width_valid                       tests_game   game_width_valid)
add_test(game_width_null_game                   tests_game   game_width_null_game)
add_test(get_current_direction_valid            tests_game   get_current_direction_valid)
add_test(get_current_direction_null_game        tests_game   get_current_direction_null_game)
add_test(get_current_direction_out_of_bounds    tests_game   get_current_direction_out_of_bounds)
add_test(get_piece_valid                        tests_game   get_piece_valid)
add_test(get_piece_null_game                    tests_game   get_piece_null_game)
add_test(get_piece_out_of_bounds                tests_game   get_piece_out_of_bounds)
add_test(is_edge_EMPTY                          tests_game   is_edge_EMPTY)
add_test(is_edge_LEAF                           tests_game   is_edge_LEAF)
add_test(is_edge_SEGMENT                        tests_game   is_edge_SEGMENT)
add_test(is_edge_CORNER                         tests_game   is_edge_CORNER)
add_test(is_edge_TEE                            tests_game   is_edge_TEE)
add_test(is_edge_CROSS                          tests_game   is_edge_CROSS)
add_test(is_edge_coordinates_EMPTY              tests_game   is_edge_coordinates_EMPTY)
add_test(is_edge_coordinates_LEAF               tests_game   is_edge_coordinates_LEAF)
add_test(is_edge_coordinates_SEGMENT            tests_game   is_edge_coordinates_SEGMENT)
add_test(is_edge_coordinates_CORNER             tests_game   is_edge_coordinates_CORNER)
add_test(is_edge_coordinates_TEE                tests_game   is_edge_coordinates_TEE)
add_test(is_edge_coordinates_CROSS              tests_game   is_edge_coordinates_CROSS)
add_test(is_game_over_true                      tests_game   is_game_over_true)
add_test(is_game_over_true_wrapped              tests_game   is_game_over_true_wrapped)
add_test(is_game_over_false                     tests_game   is_game_over_false)
add_test(is_game_over_false_wrapped             tests_game   is_game_over_false_wrapped)
add_test(is_game_over_empty_game                tests_game   is_game_over_empty_game)
add_test(is_game_over_null_game                 tests_game   is_game_over_null_game)
add_test(is_wrapping_true                       tests_game   is_wrapping_true)
add_test(is_wrapping_false                      tests_game   is_wrapping_false)
add_test(is_wrapping_null_game                  tests_game   is_wrapping_null_game)
add_test(new_game                               tests_game   new_game)
add_test(new_game_empty                         tests_game   new_game_empty)
add_test(new_game_empty_ext                     tests_game   new_game_empty_ext)
add_test(new_game_ext                           tests_game   new_game_ext)
add_test(opposite_direction_N                   tests_game   opposite_direction_N)
add_test(opposite_direction_W                   tests_game   opposite_direction_W)
add_test(opposite_direction_S                   tests_game   opposite_direction_S)
add_test(opposite_direction_E                   tests_game   opposite_direction_E)
add_test(opposite_direction_invalid             tests_game   opposite_direction_invalid)
add_test(restart_game                           tests_game   restart_game)
add_test(rotate_piece                           tests_game   rotate_piece)
add_test(rotate_piece_one                       tests_game   rotate_piece_one)
add_test(set_piece                              tests_game   set_piece)
add_test(set_piece_current_direction            tests_game   set_piece_current_direction)
add_test(set_piece_out_of_bounds                tests_game   set_piece_out_of_bounds)
add_test(shuffle_direction                      tests_game   shuffle_direction)

add_executable(tests_bool_array tests_bool_array.c)
target_link_libraries(tests_bool_array PRIVATE bool_array project_warnings project_options)

add_test(alloc_double_bool_array            tests_bool_array    alloc_double_bool_array)

add_test(free_double_bool_array_valid       tests_bool_array    free_double_bool_array_valid)
add_test(free_double_bool_array_null_array  tests_bool_array    free_double_bool_array_null_array)
add_test(free_double_bool_array_null_line   tests_bool_array    free_double_bool_array_null_line)

add_test(check_double_bool_array_true       tests_bool_array    check_double_bool_array_true)
add_test(check_double_bool_array_false      tests_bool_array    check_double_bool_array_false)
add_test(check_double_bool_array_null_array tests_bool_array    check_double_bool_array_null_array)
add_test(check_double_bool_array_null_line  tests_bool_array    check_double_bool_array_null_line)

add_executable(tests_cell tests_cell.c)
target_link_libraries(tests_cell project_warnings project_options ${GAME_LIBS})

add_test(alloc_cell                         tests_cell   alloc_cell)

add_test(free_cell_valid                    tests_cell   free_cell_valid)
add_test(free_cell_null_cell                tests_cell   free_cell_null_cell)

add_test(get_right_cell_valid               tests_cell   get_right_cell_valid)
add_test(get_right_cell_oob_neighbour       tests_cell   get_right_cell_oob_neighbour)
add_test(get_right_cell_null_cell           tests_cell   get_right_cell_null_cell)

add_test(get_left_cell_valid                tests_cell   get_left_cell_valid)
add_test(get_left_cell_oob_neighbour        tests_cell   get_left_cell_oob_neighbour)
add_test(get_left_cell_null_cell            tests_cell   get_left_cell_null_cell)

add_test(get_top_cell_valid                 tests_cell   get_top_cell_valid)
add_test(get_top_cell_oob_neighbour         tests_cell   get_top_cell_oob_neighbour)
add_test(get_top_cell_null_cell             tests_cell   get_top_cell_null_cell)

add_test(get_bottom_cell_valid              tests_cell   get_bottom_cell_valid)
add_test(get_bottom_cell_oob_neighbour      tests_cell   get_bottom_cell_oob_neighbour)
add_test(get_bottom_cell_null_cell          tests_cell   get_bottom_cell_null_cell)

add_test(get_piece_cell_valid               tests_cell   get_piece_cell_valid)
add_test(get_piece_cell_null_cell           tests_cell   get_piece_cell_null_cell)

add_test(set_piece_cell_valid               tests_cell   set_piece_cell_valid)
add_test(set_piece_cell_null_cell           tests_cell   set_piece_cell_null_cell)

add_test(link_lines_cell_valid              tests_cell   link_lines_cell_valid)
add_test(link_lines_cell_different_width    tests_cell   link_lines_cell_different_width)
add_test(link_lines_cell_null_top           tests_cell   link_lines_cell_null_top)
add_test(link_lines_cell_null_bottom        tests_cell   link_lines_cell_null_bottom)
add_test(link_lines_cell_both_null          tests_cell   link_lines_cell_both_null)
